Resolve issues relating to create database